--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-native": "~0.35.0"
+    "react-native": "~0.35.0",
+    "react-native-svg": "^4.3.0",
+    "victory-native": "~0.4.0"
   }
 }
